--- a/.gitignore
+++ b/.gitignore
@@ -5,37 +5,12 @@
 *.log
 *.pem
 *.pub
-*token*
+*.token
 ._*
 .cloud
 .DS_Store
 .shopping_list.json
 .ssh/
-.storage/.edgeos
-.storage/alexa*
-.storage/androidtv_*
-.storage/application_credentials
-.storage/auth*
-.storage/ble_monitor/
-.storage/camera
-.storage/cloud*
-.storage/core*
-.storage/esphome*
-.storage/frontend.*
-.storage/google*
-.storage/hacs*
-.storage/hassio
-.storage/http*
-.storage/image
-.storage/onboarding
-.storage/person
-.storage/repairs*
-.storage/room_assistant/
-.storage/sonoff/sebburrell@outlook.com.json
-.storage/trace.saved_traces
-.storage/unifi_data
-.storage/unraid/
-.storage/zone
 .vscode/
 __pycache__
 configuration/System/stats.csv
@@ -61,4 +36,5 @@ tts/
 www/community/
 www/tmp/
 watchman_report.*
-zigbee*
+.venv/
+*.csv
