chore: Update .gitignore to ignore battery_notes.storage, zigbee2mqtt/state.json, and other files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,34 @@
+# Ignore Folders
+.storage
+.cloud
+.google.token
+.backup
+__pycache__
+deps
+www
+icloud
+notebooks
+tts
+custom_components_dev
+.androidkeys
+temp
+neighbours
+.ssh
+zigbee2mqtt
+image
+multiscrape
+gtfs2
+glances
+espresense
+custom_components
+
+# Ignore File Extensions
+*.conf
+*.pickle
+*.pyc
+*.crt
+*.csr
+*.key
 *auth*
 *.crt
 *.db*
@@ -6,41 +37,56 @@
 *.pem
 *.pub
 *.token
+
+# Temporary files
+*.db-journal
+*.pid
+
+# Ignore Specific Files
 ._*
-.cloud
 .DS_Store
-.shopping_list.json
-.ssh/
-.vscode/
-__pycache__
-configuration/System/stats.csv
-custom_components/
-deps/
-double-take/
-frigate.yml
-google_calendars.yaml
-HA (GitHub).code-workspace
-home-assistant.log*
-home-assistant_v2.db
-home-assistant_v2.db-shm
-home-assistant_v2.db-wal
-history.db
-image/
-known_devices.yaml
-o365_calendars.yaml
-rtsp2webrtc_v*
+.spotify-token-cache
+.uuid
+.androidkeys/adbkey
+.androidkeys/adbkey.pub
 secrets.yaml
-ssl/
-startup/
-tts/
-www/community/
-www/tmp/
-watchman_report.*
-.venv/
-*.csv
-models
-model_cache
-**backup.*
-exports
-zigbee2mqtt/state.json
-.storage/battery_notes.storage
+known_devices.yaml
+home-assistant_v2.db
+home-assistant_v2.db-wal
+home-assistant_v2.db-shm
+home-assistant.log
+home-assistant.log.1
+home-assistant.log.fault
+home-assistant-rollback.log
+google_calendars.yaml
+www/images/radar_moree_256km.gif
+www/images/radar_namoi_128km.gif
+README_Dev.md
+zigbee.db
+zigbee.db-shm
+zigbee.db-wal
+airsonos.xml
+.xbox-token.json
+.pip_progress
+isort.cfg
+.prettierrc.js
+.prettierrc.yaml
+.homekit.state
+.Google Fit_google_fit.token
+alexa*.html
+temp.yml
+yamlint_errors.txt
+.ip_authenticated.yaml
+.google_fit.token
+check_config.txt
+watchman_report.txt
+file.log
+solcast.json
+rtsp*
+sonos_playlist.yaml
+icloud3*.log
+persist_notify.log
+
+node-red/*
+!node-red/flows.json
+!node-red/settings.js
