--- a/themes/visionos/visionos.yaml
+++ b/themes/visionos/visionos.yaml
@@ -1,4 +1,5 @@
 visionos:
+  card-mod-theme: visionos
   modes:
     light:
       background-image: "center / cover no-repeat fixed url('/local/day.jpg')"
@@ -15,14 +16,14 @@ visionos:
   # Global
   lovelace-background: var(--background-image)
   primary-color: var(--cyan-color)
-  light-primary-color: "#B6B6C1" # (icons on left menu) (light: systemGray5 from iOS dark mode, dark: XXX)
-  divider-color: rgba(152, 152, 157, 0.3) # from Apple systemGray dark mode
+  light-primary-color: "#B6B6C1"
+  divider-color: rgba(152, 152, 157, 0.3)
   accent-color: var(--primary-color)
   # Text
   primary-text-color: rgba(255, 255, 255, 0.96)
   secondary-text-color: "#d3d3d3"
   text-primary-color: var(--primary-text-color)
-  disabled-text-color: rgba(208, 208, 208, 0.5) # XXX: https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/2
+  disabled-text-color: rgba(208, 208, 208, 0.5)
   text-dark-color: var(--primary-text-color)
   # Sidebar Menu
   sidebar-background-color: var(--secondary-background-color)
@@ -36,12 +37,12 @@ visionos:
   state-icon-active-color: var(--yellow-color)
   state-icon-unavailable-color: var(--disabled-text-color)
   state-inactive-color: var(--disabled-text-color)
-  paper-item-icon-active-color: var(--state-icon-active-color) # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/30
+  paper-item-icon-active-color: var(--state-icon-active-color)
   # Sliders
   paper-slider-knob-color: "#FFFFFF"
   paper-slider-knob-start-color: var(--paper-slider-knob-color)
   paper-slider-pin-color: var(--paper-slider-knob-color)
-  paper-slider-active-color: "#0984ff" # from Apple systemBlue dark mode
+  paper-slider-active-color: "#0984ff"
   paper-slider-secondary-color: var(--paper-slider-knob-color)
   paper-slider-container-color: rgba(255, 255, 255, 0.5)
   paper-slider-font-color: "#000"
@@ -49,14 +50,14 @@ visionos:
   # Labels
   label-badge-background-color: "#23232E"
   label-badge-text-color: "#F1F1F1"
-  label-badge-red: rgba(255, 159, 9, 0.7) # from Apple systemOrange dark mode
+  label-badge-red: rgba(255, 159, 9, 0.7)
   # Cards
-  card-background-color: var(--secondary-background-color) # Unused entities table background
+  card-background-color: var(--secondary-background-color)
   paper-listbox-background-color: var(--primary-background-color)
   ha-card-border-radius: 20px
   paper-card-background-color: var(--ha-card-background)
-  rgb-card-background-color: rgb(10, 10, 10) # see https://github.com/basnijholt/lovelace-ios-themes/issues/60
-  ha-card-border-width: 0 # https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/82#event-7732695357
+  rgb-card-background-color: rgb(10, 10, 10)
+  ha-card-border-width: 0
   ha-card-backdrop-filter: blur(20px)
   ha-card-box-shadow: 0.5px 0.5px 1px 0px rgba(255, 255, 255, 0.40) inset, -0.5px -0.5px 1px 0px rgba(255, 255, 255, 0.10) inset, 0px 1px 2px 0px rgba(0, 0, 0, 0.10)
   # Toggles
@@ -93,23 +94,22 @@ visionos:
   orange-color: "#FF9F0A"
   brown-color: "#AC8E68"
   # Other
-  paper-dialog-background-color: rgba(55, 55, 55, 0.8) # e.g., background of more-info
-  paper-item-icon-color: white # also should mini-media-player icon white (but doesn't work by itself)
+  paper-dialog-background-color: rgba(55, 55, 55, 0.8)
+  paper-item-icon-color: white
   more-info-header-background: rgba(25, 25, 25, 0.5)
-  lumo-body-text-color: var(--primary-text-color) # see https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/42
+  lumo-body-text-color: var(--primary-text-color)
   markdown-code-background-color: "#464646"
   code-editor-background-color: "#161616"
-  clear-background-color: var(--ha-card-background) # see https://github.com/basnijholt/lovelace-ios-themes/issues/64
-  mdc-theme-surface: var(--secondary-background-color) # this should be opaque as it's used by default for many overlays
+  clear-background-color: var(--ha-card-background)
+  mdc-theme-surface: var(--secondary-background-color)
   material-background-color: var(--secondary-background-color)
-  app-theme-color: rgb(122, 114, 106) # Average header color, used on the top of the browser
+  app-theme-color: rgb(122, 114, 106)
   mdc-checkbox-unchecked-color: "#FFF"
   mdc-radio-unchecked-color: "#FFF"
   # Custom
   mcg-title-letter-spacing: .15em
   mini-media-player-base-color: white
   mini-media-player-icon-color: white
-  # Added for https://github.com/basnijholt/lovelace-ios-dark-mode-theme/issues/72
   input-ink-color: var(--primary-text-color)
   input-fill-color: transparent
   input-disabled-fill-color: transparent
@@ -119,3 +119,51 @@ visionos:
   input-idle-line-color: var(--secondary-text-color)
   input-hover-line-color: var(--secondary-text-color)
   codemirror-property: var(--accent-color)
+
+  card-mod-card: |
+    ha-card, button-card {
+      --masonry-view-card-margin: 0 0 4px 0;
+      backdrop-filter: blur(20px);
+      background: var(--ha-card-background);
+      box-shadow: var(--ha-card-box-shadow);
+    }
+
+  card-mod-card-yaml: |
+    ha-card, button-card {
+      margin: 0;
+      padding: 0;
+      border: none;
+      background: none;
+      backdrop-filter: none;
+      box-shadow: none;
+    }
+    .no-background {
+      background: none !important;
+      backdrop-filter: none !important;
+      box-shadow: none !important;
+      border: none !important;
+      margin: 0 !important;
+      padding: 0 !important;
+    }
+
+  card-mod-view-yaml: |
+    "hui-view":
+      $: |
+        .column {
+          margin-left: 0 !important;
+          margin-right: 0 !important;
+        }
+        .column > * {
+          margin-top: 0 !important;
+          margin-bottom: 0 !important;
+        }
+
+  card-mod-root-yaml: |
+    .edit-mode .header {
+      background: rgba(0, 0, 0, 0.2) !important;
+    }
+
+  card-mod-more-info-yaml: |
+    .more-info-header {
+      background: rgba(25, 25, 25, 0.5) !important;
+    }
